1.56
-----
Use new version of FrontPanel API. This comes in both x86 and x64 flavors,
so there are now two flavors of the Atticus binary.

1.57
-----

(in progress) Code cleanup.
Renamed AtticusServerRuntime to AtticusServerCommunicator.
Created some subdirectories in DataStructures for organizational purposes.
Variety of small code changes, renames, deletions.